<resources>
    <string name="album">Album</string>
    <string name="album_delete_this_photo_confirm">Sure to delete this photo?</string>
    <string name="album_empty_album_string">No snapshot record!</string>
    <string name="app_name">Wulian iCam</string>
    <string name="common_accept">Accept</string>
    <string name="common_btn_copy">Copy</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_change_pwd">Change password</string>
    <string name="common_change_pwd_fail">Change password failed</string>
    <string name="common_change_pwd_success">Change password succeeded</string>
    <string name="common_check_all">Choose all</string>
    <string name="common_check_count"><![CDATA[Selected <font color=#099CE4>%d</font> items]]></string>
    <string name="common_colon">:</string>
    <string name="common_come_from">Come from:</string>
    <string name="common_day_ago">day(s) ago</string>
    <string name="common_decline">Decline</string>
    <string name="common_delete">Delete</string>
    <string name="common_delete_failed">Delete failed</string>
    <string name="common_delete_success">Delete succeeded</string>
    <string name="common_down_pull_refresh">Pull down to refresh</string>
    <string name="common_end_than_start">End time must bigger than start time</string>
    <string name="common_end_time">End Time</string>
    <string name="common_everyday">everyday</string>
    <string name="common_finish">Finish</string>
    <string name="common_fri">Fri</string>
    <string name="common_function">Function</string>
    <string name="common_hour">hour</string>
    <string name="common_hour_ago">hour(s) ago</string>
    <string name="common_i_know">I got it</string>
    <string name="common_icam">iCam</string>
    <string name="common_icam_type_01">iCam camera</string>
    <string name="common_icam_type_02">Lookever camera</string>
    <string name="common_icam_type_03">Outdoor camera</string>
    <string name="common_icam_type_04">iCam camera 02 type</string>
    <string name="common_icam_type_05">Lookever camera night</string>
    <string name="common_icam_type_none">Unsupported devices</string>
    <string name="common_ignore">Ignore</string>
    <string name="common_in_processing">In progress, please wait…</string>
    <string name="common_input_name">Enter name</string>
    <string name="common_just">Just now</string>
    <string name="common_last_update">Last update</string>
    <string name="common_loading">Loading…</string>
    <string name="common_min">min</string>
    <string name="common_min_ago">minute(s) ago</string>
    <string name="common_mon">Mon</string>
    <string name="common_month_ago">month(s) ago</string>
    <string name="common_network_protect">Flow protection</string>
    <string name="common_next_step">Next step</string>
    <string name="common_no_sdcard">No SD card</string>
    <string name="common_none_account">Unknown error</string>
    <string name="common_password">Password</string>
    <string name="common_prompt">Prompt</string>
    <string name="common_record">Record</string>
    <string name="common_recent_update">Recent update:</string>
    <string name="common_refresh_list">Refresh list</string>
    <string name="common_refresh_now">Refreshing…</string>
    <string name="common_refreshing">Refreshing, please wait…</string>
    <string name="common_regex_pwd_all_equal">Passwords cannot be same numbers or letters</string>
    <string name="common_regex_pwd_conti">Passwords cannot be continuous numbers or letters</string>
    <string name="common_regex_pwd_range">Password for 6–18 chars</string>
    <string name="common_release_refresh">Loosen to refresh</string>
    <string name="common_repeat">repeat</string>
    <string name="common_reset">Reset</string>
    <string name="common_result">Result</string>
    <string name="common_retry">Retry</string>
    <string name="common_scene">Scene</string>
    <string name="common_sat">Sat</string>
    <string name="common_select_timezone">Select timezone</string>
    <string name="common_send">Send</string>
    <string name="common_send_fail">Authorization request send failed!</string>
    <string name="common_setting">Setting</string>
    <string name="common_setting_fail">Setting failed</string>
    <string name="common_setting_success">Setting succeeded</string>
    <string name="common_share">Share</string>
    <string name="common_start_setting">Start Setting</string>
    <string name="common_start_time">Start Time</string>
    <string name="common_sun">Sun</string>
    <string name="common_sure">Sure</string>
    <string name="common_thurs">Thurs</string>
    <string name="common_tip">Hint</string>
    <string name="common_tue">Tues</string>
    <string name="common_unbind">Unbind</string>
    <string name="common_unknown">Unknown</string>
    <string name="common_wed">Wed</string>
    <string name="common_workday">workday</string>
    <string name="config_add_camera">Add Camera</string>
    <string name="config_add_camera_advent">Just several steps to connect camera with internet, check home staus and record home life anytime and anywhere</string>
    <string name="config_add_fail">Add camera failed</string>
    <string name="config_adhoc_is_not_suppored">AdHoc is not supported by Android platform yet!</string>
    <string name="config_already_hear_tip_voice">Heard prompt voice</string>
    <string name="config_back_home">Back to homepage</string>
    <string name="config_barcode_config">QR code setting</string>
    <string name="config_barcode_connect_other_camera">Connect others\' camera by barcode</string>
    <string name="config_barcode_invalid">Invalid QR code? change another one</string>
    <string name="config_barcode_link">QR code connecting</string>
    <string name="config_barcode_link_tip">Camera and cell phone are under the same wifi, and keep appropriate distance with router</string>
    <string name="config_barcode_mine">My camera QR code</string>
    <string name="config_barcode_show_tips">Scan camera QR code \n to add device</string>
    <string name="config_barcode_tips">Scan QR code with distance of 10Ὰ20 centimeters</string>
    <string name="config_barcode_tips_hear_voice">When you hear the "beep" tone, click Next</string>
    <string name="config_barcode_tips_hear_voice_for_06">When you hear the "network connecting", click Next</string>
    <string name="config_barcode_type_add">Add with QR code</string>
    <string name="config_bind_user">Bind username</string>
    <string name="config_binding_to_your_account">Binding device to your account…</string>
    <string name="config_camera_framework_bug">Camera access is not allowed, please try again after the cell phone camera is allowed to access</string>
    <string name="config_camera_wifi_success">Camera configures with Wi-Fi successfully!</string>
    <string name="config_capture_device">Scan device</string>
    <string name="config_click_device_set_button"><![CDATA[Click<font color=#eb743b>SET</font>key twice quickly<br/>and check whether can hear [beep] prompt voice]]></string>
    <string name="config_click_device_sys_button"><![CDATA[Click<font color=#eb743b>SYS</font>key twice quickly<br/>and check whether can hear [beep] prompt voice]]></string>
    <string name="config_config_wifi_advent">To reconfigure the camera using WiFi, the camera needs to be connected, follow the instructions in the vicinity of the device, oh.</string>
    <string name="config_confirm_wifi_hidden">Please confirm current Wi-Fi is not hidden</string>
    <string name="config_connect_my_camera">Connect my camera</string>
    <string name="config_connect_wifi">Connect wifi</string>
    <string name="config_connect_wifi_finish">After finished,Click "Next"</string>
    <string name="config_connect_wifi_first">Please connect Wi-Fi first</string>
    <string name="config_connect_wifi_manual">Connect wifi manually</string>
    <string name="config_connect_wifi_manual_tip"><![CDATA[Input WiFi name and password<br/>Safity:WPA/WAP2 PSK]]></string>
    <string name="config_connect_wifi_name"><![CDATA[WiFi Name:<font color=#eb743b>%s</font>]]></string>
    <string name="config_connect_wifi_psw"><![CDATA[WiFi Passwork:<font color=#eb743b>%s</font>]]></string>
    <string name="config_connect_wifi_tip">Open WiFi, Find the device and connect</string>
    <string name="config_copy_wifi_name">Wifi name copied</string>
    <string name="config_copy_wifi_psw">Wifi password copied</string>
    <string name="config_device_already_in_list">This device is already in your list.</string>
    <string name="config_device_bind_others">The Camera has been bound by other users</string>
    <string name="config_device_bind_success">Bind device succeeded</string>
    <string name="config_device_getready">Device getready</string>
    <string name="config_device_link_longtime">Connecting, please wait…</string>
    <string name="config_device_not_match_scan">Device information and barcode don\'t match</string>
    <string name="config_device_search">Inquiry</string>
    <string name="config_error_deviceid">Incorrect camera ID</string>
    <string name="config_exit">Exit setting</string>
    <string name="config_get_remoteip_success_setting_wifi">Configuring device Wi-Fi…</string>
    <string name="config_getip_success_get_linkinfo">Obtaining connect information…</string>
    <string name="config_hand_input">Enter manually</string>
    <string name="config_hand_input_device_id">Enter device ID manually</string>
    <string name="config_how_to_speed_up_config_wifi">How to connect camera with Internet quickly?</string>
    <string name="config_is_exit_current_config">Are you sure to exit current setting?</string>
    <string name="config_link_camera">Connect camera</string>
    <string name="config_link_device_check_led_03"><![CDATA[Connect camera power<br/>After camera<font color=#eb743b>Indicator ON</font>，click "Next"]]></string>
    <string name="config_link_device_check_led_04"><![CDATA[Connect camera power<br/>After camera<font color=#eb743b>Indicator ON</font>，click "Next"]]></string>
    <string name="config_link_valid_wifi">Please connect to valid Wi-Fi</string>
    <string name="config_linking_to_camera">Connecting camera network…</string>
    <string name="config_more_solutions">More solutions</string>
    <string name="config_no_wifi_scan_result">Fail to get Wi-Fi, please allow to get wifi in authority management</string>
    <string name="config_not_hear_tip_voice">Not hear voice?</string>
    <string name="config_not_support_device">Doesn\'t support this device temporarily</string>
    <string name="help_disclaimer">Disclaimer</string>
    <string name="help_guide">Help</string>
    <string name="info_about_us">About us</string>
    <string name="info_avatar">Avatar</string>
    <string name="info_company">Wulian Co., Ltd.</string>
    <string name="info_copyright">©2014–2015 Nanjing Iot Sensor Technology Co., Ltd.</string>
    <string name="info_customer_phone">Customer phone</string>
    <string name="info_customer_phonenum">400 928 9288</string>
    <string name="info_email">Email</string>
    <string name="info_feedback">Feedback</string>
    <string name="info_feedback_desc">"Dear customer, please describe your problems, or any suggestions"</string>
    <string name="info_official_website">Official website</string>
    <string name="info_official_website_url_simple">www.wulian.cc</string>
    <string name="info_phonenum">Phone number</string>
    <string name="info_sina">sina weibo</string>
    <string name="info_undefined">Undefined</string>
    <string name="info_weixin">wechat</string>
    <string name="info_word_limit">0/140</string>
    <string name="login_out">Log out</string>
    <string name="message_username">Username</string>
    <string name="setting_function_setting">Function Setting</string>
    <string name="setting_version_update">Version Update</string>
</resources>