<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include layout="@layout/titlebar_general" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_us_height"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_little" >

        <ImageView
            android:id="@+id/iv_about_us"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
        <!-- android:layout_centerInParent="true" 并没有改变实际位置 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_little"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_super_large" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_little"
            android:text="2.2.2"
            android:textColor="@color/grey_1" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_offical"
        style="@style/setting_top_shape"
        android:layout_marginTop="20dp" >

        <ImageView
            style="@style/setting_icon"
            android:src="@drawable/icon_offical" />

        <TextView
            style="@style/setting_item"
            android:text="@string/info_official_website" />

        <TextView
            style="@style/setting_item"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:gravity="end"
            android:text="@string/info_official_website_url_simple" />

        <ImageView style="@style/setting_arrow" />
    </LinearLayout>

    <LinearLayout style="@style/ll_divider" >

        <ImageView style="@style/img_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sina"
        style="@style/setting_middle_shape" >

        <ImageView
            style="@style/setting_icon"
            android:src="@drawable/icon_sina" />

        <TextView
            style="@style/setting_item"
            android:text="@string/info_sina" />

        <TextView
            style="@style/setting_item"
            android:gravity="end"
            android:text="@string/info_company" />

        <ImageView style="@style/setting_arrow" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_divider"
        android:visibility="gone" >

        <ImageView style="@style/img_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weixin"
        style="@style/setting_middle_shape"
        android:visibility="gone" >

        <ImageView
            style="@style/setting_icon"
            android:src="@drawable/icon_weixin" />

        <TextView
            style="@style/setting_item"
            android:text="@string/info_weixin" />

        <TextView
            style="@style/setting_item"
            android:gravity="end"
            android:text="@string/info_company" />

        <ImageView style="@style/setting_arrow" />
    </LinearLayout>

    <LinearLayout style="@style/ll_divider" >

        <ImageView style="@style/img_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_customer_service"
        style="@style/setting_bottom_shape" >

        <ImageView
            style="@style/setting_icon"
            android:src="@drawable/icon_phonenum" />

        <TextView
            style="@style/setting_item"
            android:text="@string/info_customer_phone" />

        <TextView
            style="@style/setting_item"
            android:gravity="end"
            android:text="@string/info_customer_phonenum" />

        <ImageView style="@style/setting_arrow" />
    </LinearLayout>

    <LinearLayout style="@style/ll_divider" >

        <ImageView style="@style/img_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_disclaimer"
        style="@style/setting_bottom_shape" >

        <ImageView
            style="@style/setting_icon"
            android:src="@drawable/icon_disclaimer" />

        <TextView
            style="@style/setting_item"
            android:text="@string/help_disclaimer" />

        <ImageView style="@style/setting_arrow" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:paddingBottom="2dp"
        android:text="@string/info_copyright"
        android:textSize="@dimen/textsize_small" />

</LinearLayout>