<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_custom_alertdialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_normal"
    android:background="@drawable/shape_round_rect_all_trans_white"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/v2_body_margin_top"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/icon_barcode" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:gravity="center_horizontal"
        android:text="@string/config_barcode_show_tips" />

    <Button
        android:id="@+id/btn_positive"
        style="@style/v2_btn_normal_style"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/common_i_know" />

</LinearLayout>